# modular-vsa

./: .gitmodules  README.md
Arduino Test Code 01/.pioenvs/: .sconsign.dblite  structure.hash
Arduino Test Code 01/src/: main.cpp
Matlab_sim/: README.md  joint_controller.asv  joint_controller.m  single_segment_kinematics.asv  single_segment_kinematics.m
STM32F103C8T6/stm32_printf_test_01/: README.md
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/src/arduino_antagonist_joint_controller/: CMakeLists.txt  package.xml
catkin_ws/src/arduino_antagonist_joint_controller/launch/: gamepad_interface.launch
catkin_ws/src/arduino_antagonist_joint_controller/src/: AntagonistMotorPair.hpp  joystick_msg_parser.cpp  joystick_msg_parser_v2.cpp
catkin_ws/src/arduino_antagonist_joint_controller/src/ROS_stm32f103c8_test/: ROS_stm32f103c8_test.ino
catkin_ws/src/arduino_antagonist_joint_controller/src/antagonist_joint_control/: antagonist_joint_control.ino
catkin_ws/src/arduino_antagonist_joint_controller/src/stm32_test_L293D/: stm32_test_L293D.ino
catkin_ws/src/arduino_joint_publisher/: CMakeLists.txt
catkin_ws/src/arduino_joint_publisher/src/MCP3221_joint_state_publisher/: MCP3221_joint_state_publisher.ino  README.md
catkin_ws/src/arduino_joint_publisher/src/Test_Xbox_gamepad/: README.md  joy_subscriber.cpp
catkin_ws/src/joint_encoders/: CMakeLists.txt  README.md
catkin_ws/src/joint_encoders/src/: publish_segment_joint_values.cpp  segment_joint.hpp
kiCad_stuff/AS5600_ANALOG_TO_I2C_v2/: AS5600_ANALOG_TO_I2C_v1.step  AS5600_ASOM_AIWilmot.lib  AS5600_I2C_v1-cache.lib  AS5600_I2C_v1.bak  AS5600_I2C_v1.kicad_pcb  AS5600_I2C_v1.kicad_pcb-bak  AS5600_I2C_v1.net  AS5600_I2C_v1.sch  AS5600_I2C_v1.step  modular_segment_lib.lib
kiCad_stuff/AS5600_I2C_eth_v2/: AS5600_I2C_v1.bak  AS5600_I2C_v1.kicad_pcb  AS5600_I2C_v1.kicad_pcb-bak  AS5600_I2C_v1.net  AS5600_I2C_v1.plt  AS5600_I2C_v1.sch  sym-lib-table
kiCad_stuff/AS5600_I2C_molex_v1/: AS5600_I2C_molex_v1.kicad_pcb  AS5600_I2C_molex_v1.kicad_pcb-bak  AS5600_I2C_molex_v1.net  AS5600_I2C_molex_v1.sch  AS5600_I2C_molex_v1.step  fp-lib-table
kiCad_stuff/AS5600_I2C_v1/: AS5600_I2C_v1.bak  (+7 more)
test_AS5600/: test_AS5600_ino.ino
test_MCP3221/: scan_I2C.cpp
urdf_stuff/src/sara_8dof_v1/: CMakeLists.txt  SARA.urdf  SARA.urdf.xacro  SARA.xacro  display.launch  package.xml  robot.urdf
urdf_stuff/src/sara_8dof_v1/components/: base0.stp  base_link0.stp  link10.stp  link20.stp
urdf_stuff/src/sara_8dof_v1/config/: segment_controller.yaml
urdf_stuff/src/sara_8dof_v1/launch/: all.launch  controllers.launch  display.launch  segment_sim.launch
urdf_stuff/src/sara_8dof_v1/meshes/: link2.stl
(+400 files in other folders)
